upates and bug fixes
* `data` argument removed, use `{ "data": .. }`
* fixed pagination bugs
* improved pagination approach
* added responsive tables, use `{ "responsive": true }`
* get selected column values, `.table("selected")`
* styling improvements
* editing bug fixes

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -19,6 +19,7 @@
         "ignoreAtRules": [ "if", "else" ]
       }
     ],
+    "font-family-no-missing-generic-family-keyword": null,
     "no-descending-specificity": null,
     "number-leading-zero": "never"
   }
