--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "css-lint": "stylelint --syntax scss src/scss/**/*.scss",
     "css-compile": "node-sass --quiet --output-style expanded src/scss/main.scss src/css/chabudai.css",
     "css-minify": "cleancss --level 1 --output dist/css/chabudai.min.css src/css/chabudai.css",
-    "css": "npm-run-all css-lint css-compile css-minify"
+    "css": "npm-run-all css-lint css-compile css-minify",
+    "site": "cp dist/js/chabudai.min.js docs/assets/js/ && cp dist/css/chabudai.min.css docs/assets/css/ && cd docs/ && jekyll build"
   },
   "author": "Nathan Teetor <nathanteetor@gmail.com>",
   "repository": "https://github.com/nteetor/chabudai.git",
