--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chabudai",
-  "version": "0.0.5-1",
+  "version": "0.0.6",
   "description": "A small Bootstrap 4 table plugin.",
   "main": "dist/js/chabudai.min.js",
   "scripts": {
